--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,5 @@
 /* James Dumitru ITMD 362 */
-/*Desktop view*/
-@media only screen and (min-width: 768px) {
-  h2 {
-    text-align: center;
-    font-size: 30px;
-    padding-top: 5%;
-    padding-bottom: 2%;
-  }
-  body {
-    text-align: center;
-    color: #B2BEC3;
-    background-color: #2D3436;
-    font-family: Illuminatti;
-  }
-  input {
-    width: 350px;
-    padding: 10px 10px;
-    margin: 15px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    font-family: Illuminatti;
-  }
-/*For the spacing in between the form*/
-  #date {
-    padding-bottom: 15%;
-  }
-  #email {
-    padding-bottom: 15%;
-  }
-  #phone {
-    padding-bottom: 15%;
-  }
-  #code {
-    padding-bottom: 15%;
-  }
-  #submit_button{
-    background-color: #D1D7DB;
-    border: none;
-    color: gray;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    margin: 8px 4px;
-    cursor: pointer;
-  }
-/* for the last paragraph*/
-  .mes  {
-    padding-top: 5%;
-    padding-bottom: 5%;
-    font-size: 18px;
-  }
-}
+
 
 /* For Mobile and Tablet Viewing */
 @media only screen and (max-width: 768px){
@@ -97,7 +42,7 @@
   #code {
     padding-bottom: 15%;
   }
-  #submit_button{
+  #button{
     background-color: #D1D7DB;
     border: none;
     color: gray;
@@ -116,3 +61,69 @@
     font-size: 18px;
   }
 }
+
+
+
+
+/*-------------------------------------------------------------------*/
+
+
+/*Desktop view*/
+@media only screen and (min-width: 768px) {
+  h2 {
+    text-align: center;
+    font-size: 30px;
+    padding-top: 5%;
+    padding-bottom: 2%;
+  }
+  body {
+    text-align: center;
+    color: #B2BEC3;
+    background-color: #2D3436;
+    font-family: Illuminatti;
+  }
+  input {
+    width: 350px;
+    padding: 10px 10px;
+    margin: 15px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-family: Illuminatti;
+  }
+/*For the spacing in between the form*/
+  #date {
+    padding-bottom: 15%;
+  }
+  #email {
+    padding-bottom: 15%;
+  }
+  #phone {
+    padding-bottom: 15%;
+  }
+  #code {
+    padding-bottom: 15%;
+  }
+  #button{
+    background-color: #D1D7DB;
+    border: none;
+    color: gray;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin: 8px 4px;
+    cursor: pointer;
+  }
+/* for the last paragraph*/
+  .mes  {
+    padding-top: 5%;
+    padding-bottom: 5%;
+    font-size: 18px;
+  }
+}
+
+
+/* ---------------------------------------------------------*/
