--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,11 @@
     font-size: 20px;
     margin: 8px 4px;
     cursor: pointer;
+    outline: none;
+    color: #fff;
+    background-color: #4CAF50;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
   }
 /* for the last paragraph*/
   .mes  {
@@ -63,6 +68,77 @@
 }
 
 /*-------------------------------------------------------------------*/
+
+
+
+/*-------------------------------------------------------------------*/
+
+
+/*Desktop view*/
+@media only screen and (min-width: 768px) {
+  h2 {
+    text-align: center;
+    font-size: 30px;
+    padding-top: 5%;
+    padding-bottom: 2%;
+  }
+  body {
+    text-align: center;
+    color: #B2BEC3;
+    background-color: #2D3436;
+    font-family: Illuminatti;
+  }
+  input {
+    width: 350px;
+    padding: 10px 10px;
+    margin: 15px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-family: Illuminatti;
+  }
+/*For the spacing in between the form*/
+  #date {
+    padding-bottom: 15%;
+  }
+  #email {
+    padding-bottom: 15%;
+  }
+  #phone {
+    padding-bottom: 15%;
+  }
+  #code {
+    padding-bottom: 15%;
+  }
+  #button{
+    background-color: #D1D7DB;
+    border: none;
+    color: gray;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin: 8px 4px;
+    cursor: pointer;
+    outline: none;
+    color: #fff;
+    background-color: #4CAF50;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+  }
+/* for the last paragraph*/
+  .mes  {
+    padding-top: 5%;
+    padding-bottom: 5%;
+    font-size: 18px;
+  }
+}
+
+
+/* ---------------------------------------------------------*/
+
 
 
 /*For Tablet Viewing*/
@@ -118,6 +194,11 @@
     font-size: 20px;
     margin: 8px 4px;
     cursor: pointer;
+    outline: none;
+    color: #fff;
+    background-color: #4CAF50;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
   }
 /* for the last paragraph*/
   .mes  {
@@ -126,65 +207,3 @@
     font-size: 18px;
   }
 }
-/*-------------------------------------------------------------------*/
-
-
-/*Desktop view*/
-@media only screen and (min-width: 768px) {
-  h2 {
-    text-align: center;
-    font-size: 30px;
-    padding-top: 5%;
-    padding-bottom: 2%;
-  }
-  body {
-    text-align: center;
-    color: #B2BEC3;
-    background-color: #2D3436;
-    font-family: Illuminatti;
-  }
-  input {
-    width: 350px;
-    padding: 10px 10px;
-    margin: 15px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    font-family: Illuminatti;
-  }
-/*For the spacing in between the form*/
-  #date {
-    padding-bottom: 15%;
-  }
-  #email {
-    padding-bottom: 15%;
-  }
-  #phone {
-    padding-bottom: 15%;
-  }
-  #code {
-    padding-bottom: 15%;
-  }
-  #button{
-    background-color: #D1D7DB;
-    border: none;
-    color: gray;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    margin: 8px 4px;
-    cursor: pointer;
-  }
-/* for the last paragraph*/
-  .mes  {
-    padding-top: 5%;
-    padding-bottom: 5%;
-    font-size: 18px;
-  }
-}
-
-
-/* ---------------------------------------------------------*/
