--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,14 @@
     border-radius: 15px;
     box-shadow: 0 9px #999;
   }
+
+  .button:hover {background-color: #3e8e41}
+
+  .button:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+}
 /* for the last paragraph*/
   .mes  {
     padding-top: 5%;
@@ -128,6 +136,16 @@
     border-radius: 15px;
     box-shadow: 0 9px #999;
   }
+
+
+    .button:hover {background-color: #3e8e41}
+
+    .button:active {
+      background-color: #3e8e41;
+      box-shadow: 0 5px #666;
+      transform: translateY(4px);
+  }
+
 /* for the last paragraph*/
   .mes  {
     padding-top: 5%;
@@ -200,6 +218,18 @@
     border-radius: 15px;
     box-shadow: 0 9px #999;
   }
+
+
+    .button:hover {background-color: #3e8e41}
+
+    .button:active {
+      background-color: #3e8e41;
+      box-shadow: 0 5px #666;
+      transform: translateY(4px);
+  }
+
+
+
 /* for the last paragraph*/
   .mes  {
     padding-top: 5%;
