--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,78 @@
 /*-------------------------------------------------------------------*/
                           /*For Tablet Viewing*/
 /*-------------------------------------------------------------------*/
+@media only screen and (min-width: 600px) {
+h2{
+  text-align: center;
+  font-size: 25px;
+  padding-top: 5%;
+  padding-bottom: 2%;
+  font-family: 'Della Respira', serif;
+}
 
+body{
+  text-align: center;
+  color: #B2BEC3;
+  background-color: #2D3436;
+  font-family: 'Titillium Web', sans-serif;
+}
+
+input{
+  width: 50%;
+  padding: 10px 20px;
+  margin: 15px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-sizing: border-box;
+  text-align: center;
+  font-family: 'Zilla Slab', regular, serif;
+
+}
+/*For the spacing in between the form*/
+#date {
+  padding-bottom: 15%;
+}
+#email {
+  padding-bottom: 15%;
+}
+#phone {
+  padding-bottom: 15%;
+}
+#code {
+  padding-bottom: 15%;
+}
+#submit_button{
+  background-color: #D1D7DB;
+  color: gray;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 8px 4px;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.button:hover {background-color: #3e8e41}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+/* for the last paragraph*/
+.mes  {
+  padding-top: 5%;
+  padding-bottom: 5%;
+  font-size: 18px;
+}
+/*----------------------------------------------------------------------------*/
 @media only screen and (max-width: 600px){
   h2{
     text-align: center;
@@ -229,5 +300,79 @@
     padding-bottom: 5%;
     font-size: 18px;
   }
+/*----------------------------------------------------------------------------*/
+
+  @media only screen and (max-width: 600px){
+    h2{
+      text-align: center;
+      font-size: 25px;
+      padding-top: 5%;
+      padding-bottom: 2%;
+      font-family: 'Della Respira', serif;
+    }
+
+    body{
+      text-align: center;
+      color: #B2BEC3;
+      background-color: #2D3436;
+      font-family: 'Titillium Web', sans-serif;
+    }
+
+    input{
+      width: 50%;
+      padding: 10px 20px;
+      margin: 15px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      box-sizing: border-box;
+      text-align: center;
+      font-family: 'Zilla Slab', regular, serif;
+
+    }
+  /*For the spacing in between the form*/
+    #date {
+      padding-bottom: 15%;
+    }
+    #email {
+      padding-bottom: 15%;
+    }
+    #phone {
+      padding-bottom: 15%;
+    }
+    #code {
+      padding-bottom: 15%;
+    }
+    #submit_button{
+      background-color: #D1D7DB;
+      color: gray;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 20px;
+      margin: 8px 4px;
+      cursor: pointer;
+      outline: none;
+      color: #fff;
+      background-color: #4CAF50;
+      border-radius: 15px;
+      box-shadow: 0 9px #999;
+    }
+
+    .button:hover {background-color: #3e8e41}
+
+    .button:active {
+      background-color: #3e8e41;
+      box-shadow: 0 5px #666;
+      transform: translateY(4px);
+    }
+  /* for the last paragraph*/
+    .mes  {
+      padding-top: 5%;
+      padding-bottom: 5%;
+      font-size: 18px;
+    }
+
 /*-------------------------------------------------------------------*/
 /*-------------------------------------------------------------------*/
