--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 
 /*  Golden Section Modular Scale:
   https://www.modularscale.com/?25&px&1.618
-  
+
 */
 
 /*-------------------------------------------------------------------*/
@@ -378,6 +378,9 @@
       padding-bottom: 5%;
       font-size: 18px; /*1.125em*/
     }
-
+}
+}
+}
+}
 /*-------------------------------------------------------------------*/
 /*-------------------------------------------------------------------*/
